ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-h-ingress
  namespace: test-ridha
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "test.ridha"
      http:
        paths:
          - path: /europe
            pathType: Prefix
            backend:
              service:
                name: europe
                port:
                  number: 80
